<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dev.englishdoc.Register">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtNama"
        android:hint="@string/nama"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/txtPhone"
        android:hint="@string/phone"
        android:layout_alignTop="@+id/txtEmail"
        android:layout_alignStart="@+id/txtEmail"
        android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txtEmail"
        android:hint="@string/email"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/txtNama"
        android:layout_alignStart="@+id/txtNama" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtUsername"
        android:hint="@string/username"
        android:layout_marginTop="57dp"
        android:layout_below="@+id/txtEmail"
        android:layout_alignStart="@+id/txtPhone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtPassword"
        android:hint="@string/password"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/txtUsername" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtConfirmPass"
        android:hint="@string/confirm_password"
        android:layout_below="@+id/txtPassword"
        android:layout_alignStart="@+id/txtPassword"
        android:layout_marginTop="11dp" />

    <Button
        android:text="@string/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSimpan"
        android:layout_below="@+id/txtConfirmPass"
        android:layout_alignStart="@+id/txtConfirmPass"
        android:layout_marginTop="18dp"
        android:layout_alignEnd="@+id/txtConfirmPass"
        android:layout_alignParentStart="false" />
</RelativeLayout>
